--- a/style.css
+++ b/style.css
@@ -438,11 +438,72 @@
 
 
 
-.sk4in{
+.sk4div{
     background-repeat: no-repeat;
     background-image: url(handshake.jpg);
     background-position: center;
     width: 1475px;
     height: 375px;
     margin-left: 205px;
+    border-radius: 7px;   
+}
+
+
+
+
+
+
+.sk4h{
+    color: white;
+    text-align: center;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 35px;
+}
+
+
+
+
+
+
+.sk4p{
+    margin-top: 50px;
+    text-align: center;
+    color: #dbdbdb;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+
+
+
+
+.feed{
+    text-align: center;
+    margin-top: 40px;
+}
+
+
+
+
+.inp{
+    border: none;
+    border-radius: 8px;
+    width: 548px;
+    height: 57px;
+    color: #0D1321;
+    font-size: 16px;
+    text-align: center;
+}
+
+
+
+
+.sub{
+    width: 120px;
+    height: 57px;
+    border: none;
+    border-radius: 8px;
+    margin-left: 10px;
+    font-size: 15px;
+    color: #0D1321;
 }
